# voxel_engine_2025

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEAD_CODE_ANALYSIS_REPORT.md  OVERLAY_FRAMEWORK_DESIGN.md  README.md  engine.ini  input.ini  theme.hpp
default_config/: engine.ini  input.ini  theme.ini
scripts/: create_release.bat  create_release.sh
src/app/: CMakeLists.txt  main.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp  controller.cpp  controller.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp  config_manager.cpp  config_manager.hpp  ini_parser.cpp  ini_parser.hpp
src/core/: CMakeLists.txt  logging.cpp  logging.hpp  math.cpp  math.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  key_constants.cpp  key_constants.hpp
src/mesh/: CMakeLists.txt  greedy_mesher.cpp  greedy_mesher.hpp  mesh.cpp  mesh.hpp
src/render/: CMakeLists.txt  gl_app.cpp  gl_app.hpp  pipeline.cpp  pipeline.hpp  raycast.cpp  raycast.hpp  renderer.cpp  renderer.hpp
src/render/glad/: glad.c
src/ui/: CMakeLists.txt  hud.cpp  hud.hpp  key_bindings_menu.cpp  key_bindings_menu.hpp  overlay.cpp  overlay.hpp  settings_menu.cpp  settings_menu.hpp  theme.cpp  theme.hpp  ui_manager.cpp  ui_manager.hpp
src/voxel/: CMakeLists.txt  chunk.cpp  chunk.hpp  voxel.cpp  voxel.hpp  world.cpp  world.hpp  world_manager.cpp  world_manager.hpp
